Add ability to loop through workouts in index page

--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -1,1 +1,6 @@
 %h1 I'm in the index view
+- @workouts.each do |workout|
+  %p= workout.date
+  %p= workout.workout
+  %p= workout.mood
+  %p= workout.length
