Edit index views again

--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -1,6 +1,4 @@
-%h1 I'm in the index view
+
 - @workouts.each do |workout|
-  %p= workout.date
-  %p= workout.workout
-  %p= workout.mood
-  %p= workout.length
+  %h2= link_to workout.date, workout
+  %h3= workout.workout
